# fastapi_chat

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  settings.py  setup.cfg  setup.py  test.py
chat/: app.py  manager.py  redis.py  settings.py
fastapi_chat/: run.py
fastapi_chat/chat/: app.py  redis_connector.py  settings.py
src/: run.py
src/chat/: settings.py
